assert-struct/tests/snapshots/tuples__tuple_three_errors.snap
---
source: assert-struct/tests/tuples.rs
expression: message
---
error: assert_struct! failed
  --> assert-struct/tests/tuples_errors/three_errors.rs:20:22
   |
20 |             triple: (100, "expected", false),  // All three fields wrong
   |                      ^^^  ^^^^^^^^^^  ^^^^^ got true
   |                      |    |
   |                      |    got "actual"
   |                      got 42
